feat(api): implement payment accounts and fix swagger
- Add endpoint for payment accounts
- Fix PaymentAccountSwagger type resolution in controllers
